--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,8 @@ body{
     --clr-B4 : #B49467;
     --clr-74 : #746FA7;
     --clr-9E : #9E69AA;
-    --clr-rgba1 : rgba(8, 8, 11, 0.15); 
+    --clr-rgba1 : rgba(8, 8, 11, 0.15);
+    --swiper-theme-color: #232323; 
 
 /*============================== FONT FAMILY ======================== */
 
@@ -847,8 +848,10 @@ i{
 /*====== BLOG POST CONTENT DESIGN=======*/
 
 .post_title{
-    padding:120px 310px 10px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 90px;
 }
 .post_title h2{
     font-family: var(--Merriweather);
@@ -856,6 +859,8 @@ i{
     font-weight: 700;
     line-height: 60px;
     color:var(--clr-00);
+    width:700px;
+    text-align: center;
 }
 .post_title a{
     display: inline-flex;
@@ -865,6 +870,41 @@ i{
     color:var(--clr-73);
     font-family:var(--Playfair);
     margin-top: 20px;
+}
+.post_hero .vision{
+    top:30px;
+}
+.posts{
+    margin-top: 50px;
+}
+
+.posts{
+    height: 380px;
+    overflow: hidden;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+.post_img {
+    text-align: center;
+    height: 380px;
+    width: 70%;
+}
+
+.post_img img{
+    object-fit: cover;
+    background-position: center ;
+}
+.mySwiper{
+    padding:0 40px;
+}
+.mySwiper .swiper-horizontal>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-horizontal.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-vertical, .swiper-vertical>.swiper-pagination-progressbar {
+    width: 2px;
+    height: 100%;
+    left: 70px;
+    top: 0;
 }
 /*============================ FOOTER SECTION LAYOUT DESIGN ==========================*/
 
@@ -1268,7 +1308,20 @@ i{
     .list .single_content .content_img{
         height: 180px;
     }
-   
+
+    /*============================ RESPONSIVE POST SECTION DESIGN ==========================*/
+
+    .post_title h2{
+        font-size: var(--text-36);
+        line-height: 50px;
+        width:100%;
+    }
+    .posts{
+        height: 310px;
+    }
+    .post_img {
+        height: 310px;
+    }
   
 }
 
@@ -1450,6 +1503,24 @@ i{
         font-size: var(--text-12);
     }
 
+    /*============================ RESPONSIVE POST SECTION DESIGN ==========================*/
+    
+    .post_title h2{
+        font-size: var(--text-28);
+        line-height: 40px;
+    }
+    .posts{
+        height: 240px;
+        margin-top: 30px;
+    }
+    .post_img {
+        width:80%;
+        height:240px;
+    }
+    .post_title a{
+        margin-top: 8px;
+    }
+
 }
 
 @media screen and (max-width: 575px) {
@@ -1569,7 +1640,23 @@ i{
         font-size: var(--text-12);
         line-height: 26px;
     }
-    
+
+    /*============================ RESPONSIVE POST SECTION DESIGN ==========================*/
+
+    .post_title h2{
+        font-size: var(--text-20);
+        line-height: 40px;
+    }
+    .posts{
+        height: 150px;
+    }
+    .post_img {
+        width:85%;
+        height:150px;
+    }
+    .swiper-horizontal>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-horizontal.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-vertical, .swiper-vertical>.swiper-pagination-progressbar {
+        left: 30px;
+    }
 }
 
 @media screen and (max-width: 480px){
